# parallel-labs

lab1/: pom.xml
lab1/src/main/java/com/vorlov/lab1/task1/: Mutex.java  Task1.java
lab1/src/main/java/com/vorlov/lab1/task2/: SkipList.java  Task2.java
lab1/src/main/java/com/vorlov/lab1/task3/: MichaelAndScottQueue.java  Task3.java
lab1/src/main/java/com/vorlov/lab1/task4/: HarrisOrderedList.java  Task4.java
lab2/: config.py  main.py  pyproject.toml
lab2/actors/: bus.py  bus_stop.py
lab2/commands/: bus.py  bus_stop.py
