[tool.poetry]
name = "parallel"
version = "0.1.0"
description = ""
authors = ["Volodya Orlov <volodka.orlov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pykka = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
